Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-11435] Suboptimal diagnostics for key path component requirement failure #53836

Closed
hamishknight opened this issue Sep 7, 2019 · 1 comment
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself diagnostics QoI Bug: Diagnostics Quality of Implementation type checker Area → compiler: Semantic analysis

Comments

@hamishknight
Copy link
Collaborator

Previous ID SR-11435
Radar None
Original Reporter @hamishknight
Type Bug
Status Closed
Resolution Done
Environment

Swift version 5.1-dev (LLVM c5340df2d1, Swift 97dd1aa)
Target: x86_64-apple-darwin18.5.0

Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, DiagnosticsQoI, TypeChecker
Assignee @hamishknight
Priority Medium

md5: 74ee374817242b43149e3cdeb9818bc4

Issue Description:

For the following code:

protocol P {}

struct S<T> {
  subscript<U : P & Hashable>(x x: U) -> U { x }
}

extension S where T : P {
  var foo: Int { 0 }
}

func foo() {
  _ = \S<Int>.foo
  _ = \S<Int>.[x: 5]
}

we incorrectly associate the requirement failure with the KeyPath type:

main.swift:477:7: error: generic class 'KeyPath' requires that 'Int' conform to 'P'
  _ = \S<Int>.foo
      ^
Swift.KeyPath:1:14: note: where 'T' = 'Int'
public class KeyPath<Root, Value> : PartialKeyPath<Root> {
             ^
main.swift:478:7: error: generic class 'KeyPath' requires that 'Int' conform to 'P'
  _ = \S<Int>.[x: 5]
      ^
Swift.KeyPath:1:14: note: where 'U' = 'Int'
public class KeyPath<Root, Value> : PartialKeyPath<Root> {
             ^

We should instead associate the failure with the specific decls being referenced.

@hamishknight
Copy link
Collaborator Author

Fixed by #27087

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself diagnostics QoI Bug: Diagnostics Quality of Implementation type checker Area → compiler: Semantic analysis
Projects
None yet
Development

No branches or pull requests

1 participant